# hms-tuya

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  build_and_deploy.sh  docker-compose.yml  hms-tuya.service  vcpkg.json
.github/workflows/: docker-build.yml  release.yml
config/: devices.json.example  hms-tuya.yaml.example
frontend/: package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.html  app.routes.ts  app.scss  app.ts
frontend/src/app/components/cloud-discover/: cloud-discover.component.ts
frontend/src/app/components/device-form/: device-form.component.ts
frontend/src/app/components/device-list/: device-list.component.ts
frontend/src/app/components/log-viewer/: log-viewer.component.ts
frontend/src/app/components/nav-bar/: nav-bar.component.ts
frontend/src/app/components/settings/: settings.component.ts
frontend/src/app/services/: api.service.ts
include/: ConfigManager.h  LogBuffer.h
include/bridge/: BridgeManager.h  DeviceWorker.h  MqttBridge.h
include/web/: ApiController.h
src/: ConfigManager.cpp  LogBuffer.cpp  main.cpp
src/bridge/: BridgeManager.cpp  DeviceWorker.cpp  MqttBridge.cpp
src/web/: ApiController.cpp
static/browser/: index.html  main-GPLMMGIK.js  main-N54U5FBP.js  styles-ELQPLRYF.css
tests/: test_config_manager.cpp
